--- a/Website/CSS/stylesheet.css
+++ b/Website/CSS/stylesheet.css
@@ -11,7 +11,7 @@ html {
 
 header {
     height: 100vh;
-    background-image: url(/IMG/Hero-Image.png);
+    background-image: url(../IMG/Hero-Image.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
